<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <Switch
        android:id="@+id/switchAutoCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/corrections_autocorrect"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="16dp" />

    <Switch
        android:id="@+id/switchSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/corrections_suggestions"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="16dp" />

    <Switch
        android:id="@+id/switchCapsAssist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/corrections_caps_assist"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="16dp" />

    <Switch
        android:id="@+id/switchPunctuationAssist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/corrections_punctuation_assist"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="16dp" />
</LinearLayout>
